--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build_for_linux:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: cargo test -- --color=always --nocapture
@@ -32,7 +32,7 @@ jobs:
           path: hb-x86-64-linux.*
 
   build_for_mac:
-    runs-on: macOS-10.15
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
       - run: cargo test -- --color=always --nocapture
@@ -52,7 +52,7 @@ jobs:
 
   release_if_tag_exits:
     needs: [build_for_linux, build_for_mac]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: Extract tag name
         shell: bash
